@@ -5,7 +5,7 @@ use warnings;
 use File::Spec::Functions qw(catdir catfile);
 use File::Path qw(remove_tree);
 use Test::File;
-use Test::More tests => 36;
+use Test::More tests => 37;
 #use Test::More 'no_plan';
 use Test::File::Contents;
 use File::Copy::Recursive qw(fcopy);
