@@ -49,5 +49,12 @@
 2011/03/01 15:55:19 [49406] >f+++++++ dist/tinyint/0.1.0/tinyint-0.1.0.pgz
 2011/03/01 15:55:19 [49406] cd+++++++ meta/
 2011/03/01 15:55:19 [49406] >f+++++++ meta/mirrors.json
+2011/03/01 15:55:19 [49406] >f+++++++ meta/spec.txt
 2011/03/01 15:55:19 [49406] >f+++++++ meta/timestamp
+2011/03/01 15:55:19 [49406] cd+++++++ stats/
+2011/03/01 15:55:19 [49406] >f+++++++ stats/dist.json
+2011/03/01 15:55:19 [49406] >f+++++++ stats/extension.json
+2011/03/01 15:55:19 [49406] >f+++++++ stats/user.json
+2011/03/01 15:55:19 [49406] >f+++++++ stats/tag.json
+2011/03/01 15:55:19 [49406] >f+++++++ stats/summary.json
 2011/03/01 15:55:19 [49405] sent 1556 bytes  received 1868 bytes  total size 302398
