@@ -3,6 +3,14 @@ Revision history for Perl extension PGXN::API
 0.10.0
       - Removed PGXN::API::Stats. The same data is now generated by
         PGXN::Manager 0.11.0.
+      - Updated sync to properly copy the new stats files from the mirror root,
+        as well as the new spec file.
+      - Updated sync to update the root `index.json` only if it has changed.
+        It will of course also be created on the first sync to a new doc root.
+      - Changed sync to load templates from the mirror root instead of relying
+        on those loaded from the doc root by PGXN::API. This is because the
+        latter won't exist before we start parsing the `rsync` log file, and
+        may need updating even if it does exist.
 
 0.9.0   2011-04-06T04:18:53
       - Requests for a dist, extension, user, or tag URI ending in "/" instead
